# rocket-simple-api

./: Cargo.toml  README.md
dbbackend/: Cargo.toml
dbbackend/src/: lib.rs
entity/: Cargo.toml
entity/src/: bakery.rs  chef.rs  lib.rs  prelude.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_bakery_table.rs  m20220101_000002_chef_table.rs
src/: main.rs  schema.rs
src/errorhandle/: mod.rs
src/router/: mod.rs
