[package]
name = "rocket-simple-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".","migration","entity","dbbackend"]

[dependencies]
migration={path="migration"}
entity = {path="entity"}
dbbackend = {path="dbbackend"}

tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }

dotenv = "0.15.0"

# web framework
rocket ={version="^0.5.0-rc.2",features=["json"]}

[dependencies.sea-orm]
version = "0.9.1"
features = ["sqlx-postgres","runtime-tokio-rustls","macros"]
default-features = false